--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: checkout
-      uses: actions/checkout@latest
+      uses: actions/checkout@v4
     - name: install-cached-deps
       uses: awalsh128/cache-apt-pkgs-action@latest
       with:
