--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -18,7 +18,7 @@ jobs:
     - name: install-cached-deps
       uses: awalsh128/cache-apt-pkgs-action@latest
       with:
-        packages: libev-dev libsodium-dev python3-nacl
-        version: 1.1
+        packages: libsodium-dev python3-nacl
+        version: 1.2
     - name: make check
       run: make check
